<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_WaterTankStates" Id="{79060c8c-77a1-4aef-bc92-de01be4eabdb}">
    <Declaration><![CDATA[TYPE ST_WaterTankStates :
STRUCT
	fWaterHeight		: REAL;
	fTankAria			: REAL := 55;
	fTankHoleConstant	: REAL := 0.05;
	fSimTime			: REAL;
	fFlowIn				: REAL;
	fDt					: REAL := 0.01;
	bSimulatorRunning	: BOOL := FALSE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>