<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="P_SimulatorExample" Id="{b82db5cc-b010-4bfd-97b7-d1f1524186a6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_SimulatorExample
VAR
	stWaterTankStates : ST_WaterTankStates(fTankHoleConstant:=0.02,
										   fTankAria := 1.0,
										   fDt := 0.01);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[stWaterTankStates.fSimTime := stWaterTankStates.fSimTime + 0.01;
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>